c4prj3_finish/grade.txt
Grading at Wed Jun 10 21:25:09 UTC 2020
Running 'make clean' to do a clean build of your project
rm -rf *.o poker *~
Running 'make poker OTHERFLAGS=-O3' to build your project
gcc -Wall -Werror -ggdb3 -std=gnu99 -pedantic -O3   -c -o cards.o cards.c
gcc -Wall -Werror -ggdb3 -std=gnu99 -pedantic -O3   -c -o deck.o deck.c
gcc -Wall -Werror -ggdb3 -std=gnu99 -pedantic -O3   -c -o eval.o eval.c
gcc -Wall -Werror -ggdb3 -std=gnu99 -pedantic -O3   -c -o future.o future.c
gcc -Wall -Werror -ggdb3 -std=gnu99 -pedantic -O3   -c -o input.o input.c
input.c: In function ‘getLastIndex’:
input.c:33:9: error: implicit declaration of function ‘isalpha’ [-Werror=implicit-function-declaration]
   while(isalpha(c) || isdigit(c) || (c=='?')){
         ^
input.c:33:23: error: implicit declaration of function ‘isdigit’ [-Werror=implicit-function-declaration]
   while(isalpha(c) || isdigit(c) || (c=='?')){
                       ^
cc1: all warnings being treated as errors
<builtin>: recipe for target 'input.o' failed
make: *** [input.o] Error 1
make failed

Overall Grade: F
